--- a/Social-media-app/public/index.html
+++ b/Social-media-app/public/index.html
@@ -10,7 +10,7 @@
     />
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Baloo+Da+2:wght@400;500;600;700;800&family=Josefin+Slab:ital,wght@0,300;0,400;0,500;1,300;1,400&family=Mulish:ital,wght@0,300;0,400;0,500;1,300;1,400&family=Roboto:ital,wght@0,700;0,900;1,500&display=swap" 
+<link href="https://fonts.googleapis.com/css2?family=Baloo+Da+2:wght@400;500;600;700;800&family=Josefin+Slab:ital,wght@0,300;0,400;0,500;1,300;1,400&family=Mulish:ital,wght@0,300;0,400;0,500;1,300;1,400&family=Roboto:ital,&display=swap" 
 rel="stylesheet">
 <link rel="stylesheet" href="style.css">
     <title>React App</title>
